# cpp-goof

./: .gitignore  CMakeLists.txt  Makefile  README.md  buffer_overflow.cpp  conanfile.txt  path_traversal_vuln.cpp  sql_injection_vuln.cpp
csa-results/scan-build-2025-06-10-16-06-28-962719-cg6z0iq1/: index.html  report-0e40a0.html  report-4726a5.html  report-48b029.html  report-6ca886.html  report-7c4c57.html  report-89cc3e.html  report-c26b0c.html  report-ce589f.html  report-d5d869.html
csa-results/scan-build-2025-06-10-17-35-52-388277-melysrtp/: compile_commands.json  index.html  report-0e40a0.html  report-4726a5.html  report-48b029.html  report-6ca886.html  report-7c4c57.html  report-89cc3e.html  report-c26b0c.html  report-ce589f.html  report-d5d869.html  report-fbfcd0.html
csa-results/scan-build-2025-06-11-09-17-04-904554-3y1u_nmp/: compile_commands.json  index.html  report-0e40a0.html  report-4726a5.html  report-48b029.html  report-6ca886.html  report-7c4c57.html  report-89cc3e.html  report-c26b0c.html  report-ce589f.html  report-d5d869.html  report-fbfcd0.html
csa-results/scan-build-2025-06-11-09-33-38-331106-oufkiuvc/: compile_commands.json  index.html  report-0e40a0.html  report-4726a5.html  report-48b029.html  report-6ca886.html  report-7c4c57.html  report-89cc3e.html  report-c26b0c.html  report-ce589f.html  report-d5d869.html  report-fbfcd0.html
path-traversal/: path_traversal_fixed.cpp  path_traversal_vuln.cpp  readme.md
scan-build-results/scan-build-2025-06-10-16-02-44-117291-3iz827g0/: index.html  report-0e40a0.html  report-4726a5.html  report-48b029.html  report-6ca886.html  report-7c4c57.html  report-89cc3e.html  report-c26b0c.html  report-ce589f.html  report-d5d869.html
src/: buffer_overflow.cpp  command_injection.cpp  concurrency_atomicity_violation.cpp  concurrency_deadlock.cpp  concurrency_race_condition.cpp  cryptography_ecb_mode.cpp  cryptography_hardcoded_iv.cpp  dangling_pointer.cpp  dangling_pointer_path_sensitive.cpp  division_zero_double.cpp  division_zero_int.cpp  division_zero_int_using_library.cpp  double_free_aliased_pointer.cpp  double_free_direct.cpp  double_free_function.cpp  format_string.cpp  format_string_using_library.cpp  incorrect_typecon_narrowing.cpp  incorrect_typecon_pointer.cpp  incorrect_typecon_signed.cpp  incorrect_typecon_unsafe_c.cpp  integer_overflow_signed.cpp  integer_overflow_unsigned.cpp  memory_leak.cpp  memory_leak_destructor.cpp  memory_leak_loop.cpp  null_pointer_dereference.cpp  null_pointer_dereference_path_sensitive.cpp  resource_leak_file.cpp  resource_leak_socket.cpp  sql_injection.cpp  uninitialized_variable.cpp  unitialized_variable_path_sensitive.cpp
src/lib/: format_string.cpp  integer_division.h
src/utils/: format_string.h  integer_division.cpp
